--- a/src/psp/proyectogrupo2/vista/VistaModificarPerfil.fxml
+++ b/src/psp/proyectogrupo2/vista/VistaModificarPerfil.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="299.0" prefWidth="386.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="299.0" prefWidth="386.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="psp.proyectogrupo2.controlador.ControladorVistaModificarPerfil">
    <children>
       <Label layoutX="14.0" layoutY="14.0" text="Modificar perfil">
          <font>
