--- a/bin/psp/proyectogrupo2/vista/VistaIniciarSesion.fxml
+++ b/bin/psp/proyectogrupo2/vista/VistaIniciarSesion.fxml
@@ -24,7 +24,7 @@
          </font>
       </Label>
       <TextField fx:id="nicknameField" layoutX="111.0" layoutY="80.0" prefHeight="25.0" prefWidth="256.0" />
-      <TextField fx:id="contraseñaField" layoutX="111.0" layoutY="129.0" prefHeight="25.0" prefWidth="256.0" />
+      <TextField fx:id="contraField" layoutX="111.0" layoutY="129.0" prefHeight="25.0" prefWidth="256.0" />
       <Button defaultButton="true" layoutX="232.0" layoutY="183.0" mnemonicParsing="false" onAction="#manejaOk" prefHeight="25.0" prefWidth="62.0" text="Entrar" />
       <Button layoutX="303.0" layoutY="183.0" mnemonicParsing="false" onAction="#manejaCancelar" prefHeight="25.0" prefWidth="62.0" text="Cancelar" />
    </children>
