--- a/bin/psp/proyectogrupo2/vista/VistaRegistroCuenta.fxml
+++ b/bin/psp/proyectogrupo2/vista/VistaRegistroCuenta.fxml
@@ -51,11 +51,11 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <TextField GridPane.columnIndex="1" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField fx:id="nombreField" GridPane.columnIndex="1" />
+            <TextField fx:id="apeField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="nicknameField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="contraField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="tipoField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
          </children>
       </GridPane>
       <Button layoutX="300.0" layoutY="260.0" mnemonicParsing="false" onAction="#manejaCancelar" text="Cancelar" />
