Edit View ClienteFTP

--- a/src/psp/proyectogrupo2/vista/VistaClienteFTP.fxml
+++ b/src/psp/proyectogrupo2/vista/VistaClienteFTP.fxml
@@ -31,11 +31,11 @@
          </font>
       </Label>
       <ListView fx:id="listDir" layoutX="16.0" layoutY="109.0" prefHeight="318.0" prefWidth="285.0" />
-      <Button layoutX="341.0" layoutY="230.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="213.0" text="SUBIR FICHERO" />
-      <Button layoutX="341.0" layoutY="270.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="213.0" text="DESCAGAR FICHERO" />
-      <Button layoutX="341.0" layoutY="313.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="213.0" text="ELIMINAR FICHERO" />
-      <Button layoutX="341.0" layoutY="356.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="213.0" text="CREAR CARPETA" />
-      <Button layoutX="341.0" layoutY="402.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="213.0" text="ELIMINAR CARPETA" />
+      <Button layoutX="341.0" layoutY="231.0" mnemonicParsing="false" onAction="#manejaSubirFichero" prefHeight="25.0" prefWidth="213.0" text="SUBIR FICHERO" />
+      <Button layoutX="341.0" layoutY="271.0" mnemonicParsing="false" onAction="#manejaDescargarFichero" prefHeight="25.0" prefWidth="213.0" text="DESCAGAR FICHERO" />
+      <Button layoutX="341.0" layoutY="314.0" mnemonicParsing="false" onAction="#manejaEliminarFichero" prefHeight="25.0" prefWidth="213.0" text="ELIMINAR FICHERO" />
+      <Button layoutX="341.0" layoutY="358.0" mnemonicParsing="false" onAction="#manejaCrearCarpeta" prefHeight="25.0" prefWidth="213.0" text="CREAR CARPETA" />
+      <Button layoutX="341.0" layoutY="402.0" mnemonicParsing="false" onAction="#manejaEliminarCarpeta" prefHeight="25.0" prefWidth="213.0" text="ELIMINAR CARPETA" />
       <Label fx:id="labelFicheroSeleccionado" layoutX="16.0" layoutY="436.0" text="FICHERO SELECCIONADO: ">
          <font>
             <Font size="14.0" />
@@ -46,6 +46,6 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <ImageView fx:id="imagenView" fitHeight="119.0" fitWidth="133.0" layoutX="381.0" layoutY="89.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imagenView" fitHeight="119.0" fitWidth="133.0" layoutX="391.0" layoutY="90.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
