--- a/src/psp/proyectogrupo2/vista/VistaCuentaBancaria.fxml
+++ b/src/psp/proyectogrupo2/vista/VistaCuentaBancaria.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="psp.proyectogrupo2.controlador.ControladorVistaCuentaBancaria">
    <children>
-      <Label layoutX="147.0" layoutY="153.0" prefHeight="194.0" prefWidth="306.0" text="00,00 €">
+      <Label fx:id="labelsaldo" alignment="CENTER" contentDisplay="CENTER" layoutX="20.0" layoutY="181.0" prefHeight="141.0" prefWidth="540.0" text="77.7" wrapText="true">
          <font>
             <Font size="96.0" />
          </font>
@@ -22,8 +22,13 @@
       <TextField fx:id="ingresarField" layoutX="14.0" layoutY="427.0" />
       <Label fx:id="retirarLabel" layoutX="437.0" layoutY="407.0" text="Retirar:" />
       <TextField fx:id="retirarField" layoutX="437.0" layoutY="424.0" />
-      <Button fx:id="btningresar" layoutX="14.0" layoutY="464.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="149.0" text="INGRESAR" />
-      <Button fx:id="btnretirar" layoutX="437.0" layoutY="461.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="149.0" text="RETIRAR" />
+      <Button fx:id="btningresar" layoutX="14.0" layoutY="464.0" mnemonicParsing="false" onAction="#manejaIngresar" prefHeight="25.0" prefWidth="149.0" text="INGRESAR" />
+      <Button fx:id="btnretirar" layoutX="437.0" layoutY="461.0" mnemonicParsing="false" onAction="#manejaRetirar" prefHeight="25.0" prefWidth="149.0" text="RETIRAR" />
       <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#manejaVolver" prefHeight="25.0" prefWidth="30.0" text="&lt;-" />
+      <Label fx:id="labelsaldo1" alignment="CENTER" contentDisplay="CENTER" layoutX="161.0" layoutY="305.0" prefHeight="25.0" prefWidth="279.0" text="EUR - €">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
