--- a/src/psp/proyectogrupo2/vista/VistaMenuInicio.fxml
+++ b/src/psp/proyectogrupo2/vista/VistaMenuInicio.fxml
@@ -10,7 +10,7 @@
    <children>
       <Button layoutX="216.0" layoutY="237.0" mnemonicParsing="false" onAction="#manejaIniciarSesion" prefHeight="56.0" prefWidth="171.0" text="INICIAR SESIÓN" />
       <Button layoutX="216.0" layoutY="303.0" mnemonicParsing="false" onAction="#manejaRegistro" prefHeight="56.0" prefWidth="171.0" text="REGISTRARSE" />
-      <Button layoutX="216.0" layoutY="369.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="171.0" text="RECUPERAR CUENTA" />
+      <Button layoutX="216.0" layoutY="369.0" mnemonicParsing="false" onAction="#manejaRecuperarCuenta" prefHeight="56.0" prefWidth="171.0" text="RECUPERAR CUENTA" />
       <ImageView fx:id="imageview" fitHeight="290.0" fitWidth="459.0" layoutX="72.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
