--- a/src/psp/proyectogrupo2/vista/VistaRegistroCuenta.fxml
+++ b/src/psp/proyectogrupo2/vista/VistaRegistroCuenta.fxml
@@ -24,6 +24,7 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Label text="Nombre">
@@ -56,6 +57,12 @@
             <TextField fx:id="nicknameField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <TextField fx:id="contraField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <TextField fx:id="tipoField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Label text="Email" GridPane.rowIndex="5">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <TextField fx:id="emailField" GridPane.columnIndex="1" GridPane.rowIndex="5" />
          </children>
       </GridPane>
       <Button layoutX="300.0" layoutY="260.0" mnemonicParsing="false" onAction="#manejaCancelar" text="Cancelar" />
