--- a/src/psp/proyectogrupo2/vista/VistaModificarPerfil.fxml
+++ b/src/psp/proyectogrupo2/vista/VistaModificarPerfil.fxml
@@ -61,7 +61,7 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <TextField fx:id="tipoField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField fx:id="tipoCuentaField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             <TextField fx:id="emailField" GridPane.columnIndex="1" GridPane.rowIndex="5" />
          </children>
       </GridPane>
